# joinora

./: .gitignore  .stylelintrc.json  CLAUDE.md  README.md  eslint.config.mjs  pyproject.toml  test_local.py
.github/workflows/: build.yml  frontend.yml  lint.yml  security.yml  test.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
conducere/: git_store.py  models.py  server.py  session_store.py  tools.py  web.py  ws_manager.py
conducere/frontend/: app.js  index.html  style.css
docs/plans/: 2026-05-11-collaborative-skill-runtime.md  2026-05-13-self-service-participant-join.md
docs/specs/: 2026-05-11-collaborative-skill-runtime-design.md  2026-05-13-self-service-participant-join-design.md
docs/superpowers/specs/: 2026-05-13-agent-status-indicator-design.md
joinora/: __init__.py  git_store.py  models.py  server.py  session_store.py  tools.py  web.py
joinora/frontend/: app.js  index.html
skill/: conducere.md
skill/.claude-plugin/: marketplace.json  plugin.json
skill/skills/conducere/: SKILL.md
skill/skills/joinora/: SKILL.md
tests/conducere/: __init__.py  test_integration.py  test_models.py  test_session_store.py  test_tools.py  test_web.py
tests/joinora/: __init__.py  test_integration.py  test_models.py  test_session_store.py  test_tools.py  test_web.py
