[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conducere"
version = "0.1.0"
description = "Collaborative skill runtime — lead multiple participants together through any structured skill"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pygit2>=1.17",
    "pydantic>=2.11",
    "fastmcp[tasks]>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.1",
    "ruff>=0.11",
]

[project.scripts]
conducere = "conducere.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["conducere"]

[tool.ruff]
target-version = "py312"

[tool.bandit]
exclude_dirs = ["tests"]
